function(liblinux_test)
  set(options LINK_GTEST_MAIN)
  set(one_value_args SOURCE_PATH)
  cmake_parse_arguments(liblinux_test "${options}" "${one_value_args}" "" "${ARGN}")
  get_filename_component(directory ${liblinux_test_SOURCE_PATH} DIRECTORY)
  string(REPLACE "${CMAKE_SOURCE_DIR}/" "" relative_directory ${CMAKE_CURRENT_SOURCE_DIR})
  get_filename_component(filename ${liblinux_test_SOURCE_PATH} NAME_WE)
  string(REPLACE "/" "-" sanitized_directory ${relative_directory})
  set(target_name ${sanitized_directory}-${directory})
  add_executable(${target_name} ${liblinux_test_SOURCE_PATH})
  target_compile_options(${target_name} PUBLIC ${liblinuxpp_compiler_flags})
  target_compile_options(${target_name} PUBLIC -g3)
  target_link_libraries(${target_name} linuxpp gtest)
  if (liblinux_test_LINK_GTEST_MAIN)
    target_link_libraries(${target_name} gtest_main)
  endif()
  add_test(${target_name} ${target_name})
endfunction()

liblinux_test(SOURCE_PATH unique_fd/test.cpp LINK_GTEST_MAIN)
liblinux_test(SOURCE_PATH pipe/test.cpp LINK_GTEST_MAIN)
liblinux_test(SOURCE_PATH subprocess/test.cpp)

add_subdirectory(net)
